--- a/trix/templates/trix/trixadmin/base.django.html
+++ b/trix/templates/trix/trixadmin/base.django.html
@@ -5,7 +5,37 @@
 {% block appjs %}
     {{ block.super }}
     var DASHBOARD_URL = '{{ DEVILRY_URLPATH_PREFIX }}/trix/trixadmin/';
-    Ext.SSL_SECURE_URL = 'javascript:""';
+Ext.SSL_SECURE_URL = 'javascript:""';
+
+        Ext.define('trix.apps.trix.simplified.topic.SimplifiedTopicSearch', {
+            extend: 'Ext.data.Model',
+            requires: ['devilry.extjshelpers.RestProxy'],
+            fields: [{"type": "int", "name": "id"}, {"type": "auto", "name": "name"}],
+            idProperty: 'id',
+            proxy: Ext.create('devilry.extjshelpers.RestProxy', {
+                url: '/trix/restfulsimplifiedtopic/',
+                extraParams: {
+                    getdata_in_qrystring: true,
+                    result_fieldgroups: '[]'
+                },
+                reader: {
+                    type: 'json',
+                    root: 'items',
+                    totalProperty: 'total'
+                },
+                writer: {
+                    type: 'json'
+                }
+            })
+        });
+        Ext.create('Ext.data.Store', {
+            model: 'trix.apps.trix.simplified.topic.SimplifiedTopicSearch',
+            id: 'trix.apps.trix.simplified.topic.SimplifiedTopicStoreSearch',
+            remoteFilter: true,
+            remoteSort: true,
+            autoSync: true
+        });
+
     {% for RestfulCls in restfulapi.values %}
         {{ RestfulCls|extjs_combobox_model:"Search" }};
         {{ RestfulCls|extjs_store:"Search" }};
