attempting to fix topic view

--- a/trix/templates/trix/trixadmin/topic.django.html
+++ b/trix/templates/trix/trixadmin/topic.django.html
@@ -15,10 +15,58 @@
     Ext.require('devilry.extjshelpers.ButtonBar');
     Ext.require('trix.forms.Exercise');
     Ext.require('trix.ModelView');
-    Ext.require('trix.TopicView');
-    {{ restfulapi.RestfulSimplifiedTopic|extjs_model }};
-    {{ restfulapi.RestfulSimplifiedExercise|extjs_model }};
-    var exercisestore = {{ restfulapi.RestfulSimplifiedExercise|extjs_store }};
+Ext.require('trix.TopicView');
+
+Ext.define('trix.apps.trix.simplified.topic.SimplifiedTopic', {
+            extend: 'Ext.data.Model',
+            requires: ['devilry.extjshelpers.RestProxy'],
+            fields: [{"type": "int", "name": "id"}, {"type": "auto", "name": "name"}],
+            idProperty: 'id',
+            proxy: Ext.create('devilry.extjshelpers.RestProxy', {
+                url: '/trix/restfulsimplifiedtopic/',
+                extraParams: {
+                    getdata_in_qrystring: true,
+                    result_fieldgroups: '[]'
+                },
+                reader: {
+                    type: 'json',
+                    root: 'items',
+                    totalProperty: 'total'
+                },
+                writer: {
+                    type: 'json'
+                }
+            })
+        });
+    Ext.define('trix.apps.trix.simplified.exercise.SimplifiedExercise', {
+            extend: 'Ext.data.Model',
+            requires: ['devilry.extjshelpers.RestProxy'],
+            fields: [{"type": "int", "name": "id"}, {"type": "auto", "name": "short_name"}, {"type": "auto", "name": "long_name"}, {"type": "auto", "name": "text"}, {"type": "int", "name": "points"}, {"type": "int", "name": "topics__id"}, {"type": "int", "name": "prerequisites__id"}, {"type": "auto", "name": "fake_topics"}, {"type": "auto", "name": "fake_prerequisites"}],
+            idProperty: 'id',
+            proxy: Ext.create('devilry.extjshelpers.RestProxy', {
+                url: '/trix/restfulsimplifiedexercise/',
+                extraParams: {
+                    getdata_in_qrystring: true,
+                    result_fieldgroups: '[]'
+                },
+                reader: {
+                    type: 'json',
+                    root: 'items',
+                    totalProperty: 'total'
+                },
+                writer: {
+                    type: 'json'
+                }
+            })
+        });
+    var exercisestore = Ext.create('Ext.data.Store', {
+            model: 'trix.apps.trix.simplified.exercise.SimplifiedExercise',
+            id: 'trix.apps.trix.simplified.exercise.SimplifiedExerciseStore',
+            remoteFilter: true,
+            remoteSort: true,
+            autoSync: true
+        });
+
 {% endblock %}
 
 {% block onready %}
