--- a/trix/templates/trix/trixadmin/period.django.html
+++ b/trix/templates/trix/trixadmin/period.django.html
@@ -14,16 +14,142 @@
     Ext.require('devilry.extjshelpers.ButtonBar');
     Ext.require('trix.forms.PeriodExercise');
     Ext.require('trix.PeriodView');
-  {{ restfulapi.RestfulSimplifiedPeriod|extjs_model:"subject" }},
-  {{ restfulapi.RestfulSimplifiedTopic|extjs_model }},
-  {{ restfulapi.RestfulSimplifiedSubject|extjs_model }},
-  {{ restfulapi.RestfulSimplifiedPeriodExercise|extjs_model:"exercise" }},
-  {{ restfulapi.RestfulSimplifiedExercise|extjs_model }};
+ 
+    Ext.define('trix.apps.trix.simplified.period.SimplifiedPeriod', {
+            extend: 'Ext.data.Model',
+            requires: ['devilry.extjshelpers.RestProxy'],
+            fields: [{"type": "int", "name": "id"}, {"type": "auto", "name": "parentnode"}, {"type": "auto", "name": "short_name"}, {"type": "auto", "name": "long_name"}, {"type": "date", "name": "start_time", "dateFormat": "Y-m-dTH:i:s"}, {"type": "date", "name": "end_time", "dateFormat": "Y-m-dTH:i:s"}, {"type": "auto", "name": "group"}, {"type": "auto", "name": "period_ptr"}, {"type": "auto", "name": "parentnode__short_name"}, {"type": "auto", "name": "parentnode__long_name"}],
+            idProperty: 'period_ptr',
+            proxy: Ext.create('devilry.extjshelpers.RestProxy', {
+                url: '/trix/restfulsimplifiedperiod/',
+                extraParams: {
+                    getdata_in_qrystring: true,
+                    result_fieldgroups: '["subject"]'
+                },
+                reader: {
+                    type: 'json',
+                    root: 'items',
+                    totalProperty: 'total'
+                },
+                writer: {
+                    type: 'json'
+                }
+            })
+        }),
+  Ext.define('trix.apps.trix.simplified.topic.SimplifiedTopic', {
+            extend: 'Ext.data.Model',
+            requires: ['devilry.extjshelpers.RestProxy'],
+            fields: [{"type": "int", "name": "id"}, {"type": "auto", "name": "name"}],
+            idProperty: 'id',
+            proxy: Ext.create('devilry.extjshelpers.RestProxy', {
+                url: '/trix/restfulsimplifiedtopic/',
+                extraParams: {
+                    getdata_in_qrystring: true,
+                    result_fieldgroups: '[]'
+                },
+                reader: {
+                    type: 'json',
+                    root: 'items',
+                    totalProperty: 'total'
+                },
+                writer: {
+                    type: 'json'
+                }
+            })
+        }),
+  Ext.define('trix.apps.trix.simplified.subject.SimplifiedSubject', {
+            extend: 'Ext.data.Model',
+            requires: ['devilry.extjshelpers.RestProxy'],
+            fields: [{"type": "int", "name": "id"}, {"type": "auto", "name": "parentnode"}, {"type": "auto", "name": "short_name"}, {"type": "auto", "name": "long_name"}],
+            idProperty: 'id',
+            proxy: Ext.create('devilry.extjshelpers.RestProxy', {
+                url: '/trix/restfulsimplifiedsubject/',
+                extraParams: {
+                    getdata_in_qrystring: true,
+                    result_fieldgroups: '[]'
+                },
+                reader: {
+                    type: 'json',
+                    root: 'items',
+                    totalProperty: 'total'
+                },
+                writer: {
+                    type: 'json'
+                }
+            })
+        }),
+  Ext.define('trix.apps.trix.simplified.periodexercise.SimplifiedPeriodExercise', {
+            extend: 'Ext.data.Model',
+            requires: ['devilry.extjshelpers.RestProxy'],
+            fields: [{"type": "int", "name": "id"}, {"type": "auto", "name": "period"}, {"type": "auto", "name": "exercise"}, {"type": "int", "name": "points"}, {"type": "bool", "name": "starred"}, {"type": "int", "name": "number"}, {"type": "auto", "name": "exercise__short_name"}, {"type": "auto", "name": "exercise__long_name"}, {"type": "auto", "name": "exercise__topics__name"}],
+            idProperty: 'id',
+            proxy: Ext.create('devilry.extjshelpers.RestProxy', {
+                url: '/trix/restfulsimplifiedperiodexercise/',
+                extraParams: {
+                    getdata_in_qrystring: true,
+                    result_fieldgroups: '["exercise"]'
+                },
+                reader: {
+                    type: 'json',
+                    root: 'items',
+                    totalProperty: 'total'
+                },
+                writer: {
+                    type: 'json'
+                }
+            })
+        }),
+  Ext.define('trix.apps.trix.simplified.exercise.SimplifiedExercise', {
+            extend: 'Ext.data.Model',
+            requires: ['devilry.extjshelpers.RestProxy'],
+            fields: [{"type": "int", "name": "id"}, {"type": "auto", "name": "short_name"}, {"type": "auto", "name": "long_name"}, {"type": "auto", "name": "text"}, {"type": "int", "name": "points"}, {"type": "int", "name": "topics__id"}, {"type": "int", "name": "prerequisites__id"}, {"type": "auto", "name": "fake_topics"}, {"type": "auto", "name": "fake_prerequisites"}],
+            idProperty: 'id',
+            proxy: Ext.create('devilry.extjshelpers.RestProxy', {
+                url: '/trix/restfulsimplifiedexercise/',
+                extraParams: {
+                    getdata_in_qrystring: true,
+                    result_fieldgroups: '[]'
+                },
+                reader: {
+                    type: 'json',
+                    root: 'items',
+                    totalProperty: 'total'
+                },
+                writer: {
+                    type: 'json'
+                }
+            })
+        });
 
-  var exercisestore = {{ restfulapi.RestfulSimplifiedExercise|extjs_store }};
-  var topicstore = {{ restfulapi.RestfulSimplifiedTopic|extjs_store }};
-  var periodexercisestore = {{ restfulapi.RestfulSimplifiedPeriodExercise|extjs_store }};
-  var periodstore = {{ restfulapi.RestfulSimplifiedPeriod|extjs_store }};
+  var exercisestore = Ext.create('Ext.data.Store', {
+            model: 'trix.apps.trix.simplified.exercise.SimplifiedExercise',
+            id: 'trix.apps.trix.simplified.exercise.SimplifiedExerciseStore',
+            remoteFilter: true,
+            remoteSort: true,
+            autoSync: true
+        });
+  var topicstore = Ext.create('Ext.data.Store', {
+            model: 'trix.apps.trix.simplified.topic.SimplifiedTopic',
+            id: 'trix.apps.trix.simplified.topic.SimplifiedTopicStore',
+            remoteFilter: true,
+            remoteSort: true,
+            autoSync: true
+        });
+  var periodexercisestore = Ext.create('Ext.data.Store', {
+            model: 'trix.apps.trix.simplified.periodexercise.SimplifiedPeriodExercise',
+            id: 'trix.apps.trix.simplified.periodexercise.SimplifiedPeriodExerciseStore',
+            remoteFilter: true,
+            remoteSort: true,
+            autoSync: true
+        });
+  var periodstore = Ext.create('Ext.data.Store', {
+            model: 'trix.apps.trix.simplified.period.SimplifiedPeriod',
+            id: 'trix.apps.trix.simplified.period.SimplifiedPeriodStore',
+            remoteFilter: true,
+            remoteSort: true,
+            autoSync: true
+        });
+
 {% endblock %}
 
 {% block onready %}
