--- a/trix/templates/trix/trixadmin/period.django.html
+++ b/trix/templates/trix/trixadmin/period.django.html
@@ -176,7 +176,7 @@
             },
             items: [searchwidget, {
                 xtype: 'periodview',
-                modelname: {{ restfulapi.RestfulSimplifiedPeriod|extjs_modelname }},
+                modelname: 'trix.apps.trix.simplified.period.SimplifiedPeriod',
                 objectid: {{ objectid }},
                 periodexercisestore: periodexercisestore,
                 dashboardUrl: DASHBOARD_URL,
