--- a/trix/templates/trix/trixadmin/periodgroup.django.html
+++ b/trix/templates/trix/trixadmin/periodgroup.django.html
@@ -14,12 +14,84 @@
     Ext.require('devilry.extjshelpers.ButtonBar');
     Ext.require('trix.forms.PeriodGroup');
     Ext.require('trix.PeriodGroupView');
-  {{ restfulapi.RestfulSimplifiedPeriod|extjs_model }},
-  {{ restfulapi.RestfulSimplifiedSubject|extjs_model }},
-  {{ restfulapi.RestfulSimplifiedPeriodGroup|extjs_model:"periods" }};
+  Ext.define('trix.apps.trix.simplified.period.SimplifiedPeriod', {
+            extend: 'Ext.data.Model',
+            requires: ['devilry.extjshelpers.RestProxy'],
+            fields: [{"type": "int", "name": "id"}, {"type": "auto", "name": "parentnode"}, {"type": "auto", "name": "short_name"}, {"type": "auto", "name": "long_name"}, {"type": "date", "name": "start_time", "dateFormat": "Y-m-dTH:i:s"}, {"type": "date", "name": "end_time", "dateFormat": "Y-m-dTH:i:s"}, {"type": "auto", "name": "group"}, {"type": "auto", "name": "period_ptr"}],
+            idProperty: 'period_ptr',
+            proxy: Ext.create('devilry.extjshelpers.RestProxy', {
+                url: '/trix/restfulsimplifiedperiod/',
+                extraParams: {
+                    getdata_in_qrystring: true,
+                    result_fieldgroups: '[]'
+                },
+                reader: {
+                    type: 'json',
+                    root: 'items',
+                    totalProperty: 'total'
+                },
+                writer: {
+                    type: 'json'
+                }
+            })
+        }),
+  Ext.define('trix.apps.trix.simplified.subject.SimplifiedSubject', {
+            extend: 'Ext.data.Model',
+            requires: ['devilry.extjshelpers.RestProxy'],
+            fields: [{"type": "int", "name": "id"}, {"type": "auto", "name": "parentnode"}, {"type": "auto", "name": "short_name"}, {"type": "auto", "name": "long_name"}],
+            idProperty: 'id',
+            proxy: Ext.create('devilry.extjshelpers.RestProxy', {
+                url: '/trix/restfulsimplifiedsubject/',
+                extraParams: {
+                    getdata_in_qrystring: true,
+                    result_fieldgroups: '[]'
+                },
+                reader: {
+                    type: 'json',
+                    root: 'items',
+                    totalProperty: 'total'
+                },
+                writer: {
+                    type: 'json'
+                }
+            })
+        }),
+  Ext.define('trix.apps.trix.simplified.periodgroup.SimplifiedPeriodGroup', {
+            extend: 'Ext.data.Model',
+            requires: ['devilry.extjshelpers.RestProxy'],
+            fields: [{"type": "int", "name": "id"}, {"type": "auto", "name": "long_name"}, {"type": "auto", "name": "subject"}, {"type": "auto", "name": "subject__long_name"}, {"type": "auto", "name": "periods__id"}, {"type": "auto", "name": "periods__short_name"}, {"type": "auto", "name": "periods__long_name"}, {"type": "auto", "name": "fake_periods"}, {"type": "auto", "name": "fake_followers"}, {"type": "auto", "name": "fake_students"}],
+            idProperty: 'id',
+            proxy: Ext.create('devilry.extjshelpers.RestProxy', {
+                url: '/trix/restfulsimplifiedperiodgroup/',
+                extraParams: {
+                    getdata_in_qrystring: true,
+                    result_fieldgroups: '["periods"]'
+                },
+                reader: {
+                    type: 'json',
+                    root: 'items',
+                    totalProperty: 'total'
+                },
+                writer: {
+                    type: 'json'
+                }
+            })
+        });
 
-  var periodstore = {{ restfulapi.RestfulSimplifiedPeriod|extjs_store }};
-  var periodgroupstore = {{ restfulapi.RestfulSimplifiedPeriodGroup|extjs_store }};
+  var periodstore = Ext.create('Ext.data.Store', {
+            model: 'trix.apps.trix.simplified.period.SimplifiedPeriod',
+            id: 'trix.apps.trix.simplified.period.SimplifiedPeriodStore',
+            remoteFilter: true,
+            remoteSort: true,
+            autoSync: true
+        });
+  var periodgroupstore = Ext.create('Ext.data.Store', {
+            model: 'trix.apps.trix.simplified.periodgroup.SimplifiedPeriodGroup',
+            id: 'trix.apps.trix.simplified.periodgroup.SimplifiedPeriodGroupStore',
+            remoteFilter: true,
+            remoteSort: true,
+            autoSync: true
+        });
 {% endblock %}
 
 {% block onready %}
@@ -46,7 +118,7 @@
             },
             items: [searchwidget, {
                 xtype: 'periodgroupview',
-                modelname: {{ restfulapi.RestfulSimplifiedPeriodGroup|extjs_modelname }},
+                modelname: 'trix.apps.trix.simplified.periodgroup.SimplifiedPeriodGroup',
                 objectid: {{ objectid }},
                 periodstore: periodstore,
                 dashboardUrl: DASHBOARD_URL,
