--- a/trix/templates/trix/base.django.html
+++ b/trix/templates/trix/base.django.html
@@ -2,7 +2,7 @@
 {% load i18n %}
 <html lang="{{ LANGUAGE_CODE }}">
     <head>
-        <title>
+      <title>
             {% block title %}{{ page_title|default:"Trix" }}{% endblock %}
         </title>
         <meta http-equiv="X-UA-Compatible" content="IE=edge" >
@@ -30,7 +30,8 @@
                 paths: {
                     'devilry': '{{ DEVILRY_STATIC_URL }}/extjs_classes',
                     'Ext': '{{ DEVILRY_STATIC_URL }}/extjsux',
-                    'trix': '{{ DEVILRY_STATIC_URL }}/extjstrix'
+                    'trix': '{{ DEVILRY_STATIC_URL }}/extjstrix',
+	            'devilry_extjsextras': '{{ DEVILRY_STATIC_URL }}/devilry_extjsextras'
                 }
             });
 
@@ -73,7 +74,7 @@
             {% block appjs %}{% endblock %}
             Ext.onReady(function() {
                 {% block onready %}
-                    Ext.getBody().mask("Loading page", 'page-load-mask');
+                    //Ext.getBody().mask("Loading page", 'page-load-mask');
                 {% endblock%}
             });
         </script>
