comitting stale changes; started to add AdminButtonBar

--- a/trix/templates/trix/base.django.html
+++ b/trix/templates/trix/base.django.html
@@ -32,7 +32,8 @@
                     'devilry': '{{ DEVILRY_STATIC_URL }}/extjs_classes',
                     'Ext': '{{ DEVILRY_STATIC_URL }}/extjsux',
                     'trix': '{{ DEVILRY_STATIC_URL }}/extjstrix',
-	            'devilry_extjsextras': '{{ DEVILRY_STATIC_URL }}/devilry_extjsextras'
+	            'devilry_extjsextras': '{{ DEVILRY_STATIC_URL }}/devilry_extjsextras',
+	            'devilry_authenticateduserinfo': '{{ DEVILRY_STATIC_URL }}/devilry_authenticateduserinfo'
                 }
             });
 
