--- a/trix/templates/trix/trixadmin/base.django.html
+++ b/trix/templates/trix/trixadmin/base.django.html
@@ -43,8 +43,141 @@ Ext.SSL_SECURE_URL = 'javascript:""';
 {% endblock %}
 
 {% block onready %}
-    {{ block.super }}
-
+{{ block.super }}
+<!-- inserted for testing -->
+        Ext.define('trix.apps.trix.simplified.period.SimplifiedPeriodSearch', {
+            extend: 'Ext.data.Model',
+            requires: ['devilry.extjshelpers.RestProxy'],
+            fields: [{"type": "int", "name": "id"}, {"type": "auto", "name": "parentnode"}, {"type": "auto", "name": "short_name"}, {"type": "auto", "name": "long_name"}, {"type": "date", "name": "start_time", "dateFormat": "Y-m-dTH:i:s"}, {"type": "date", "name": "end_time", "dateFormat": "Y-m-dTH:i:s"}, {"type": "auto", "name": "group"}, {"type": "auto", "name": "period_ptr"}, {"type": "auto", "name": "parentnode__short_name"}, {"type": "auto", "name": "parentnode__long_name"}],
+            idProperty: 'period_ptr',
+            proxy: Ext.create('devilry.extjshelpers.RestProxy', {
+                url: '/trix/restfulsimplifiedperiod/',
+                extraParams: {
+                    getdata_in_qrystring: true,
+                    result_fieldgroups: '["subject"]'
+                },
+                reader: {
+                    type: 'json',
+                    root: 'items',
+                    totalProperty: 'total'
+                },
+                writer: {
+                    type: 'json'
+                }
+            })
+});
+        Ext.define('trix.apps.trix.simplified.exercise.SimplifiedExerciseSearch', {
+            extend: 'Ext.data.Model',
+            requires: ['devilry.extjshelpers.RestProxy'],
+            fields: [{"type": "int", "name": "id"}, {"type": "auto", "name": "short_name"}, {"type": "auto", "name": "long_name"}, {"type": "auto", "name": "text"}, {"type": "int", "name": "points"}, {"type": "int", "name": "topics__id"}, {"type": "int", "name": "prerequisites__id"}, {"type": "auto", "name": "fake_topics"}, {"type": "auto", "name": "fake_prerequisites"}],
+            idProperty: 'id',
+            proxy: Ext.create('devilry.extjshelpers.RestProxy', {
+                url: '/trix/restfulsimplifiedexercise/',
+                extraParams: {
+                    getdata_in_qrystring: true,
+                    result_fieldgroups: '[]'
+                },
+                reader: {
+                    type: 'json',
+                    root: 'items',
+                    totalProperty: 'total'
+                },
+                writer: {
+                    type: 'json'
+                }
+            })
+});
+        Ext.define('trix.apps.trix.simplified.node.SimplifiedNodeSearch', {
+            extend: 'Ext.data.Model',
+            requires: ['devilry.extjshelpers.RestProxy'],
+            fields: [{"type": "int", "name": "id"}, {"type": "auto", "name": "parentnode"}, {"type": "auto", "name": "short_name"}, {"type": "auto", "name": "long_name"}],
+            idProperty: 'id',
+            proxy: Ext.create('devilry.extjshelpers.RestProxy', {
+                url: '/trix/restfulsimplifiednode/',
+                extraParams: {
+                    getdata_in_qrystring: true,
+                    result_fieldgroups: '[]'
+                },
+                reader: {
+                    type: 'json',
+                    root: 'items',
+                    totalProperty: 'total'
+                },
+                writer: {
+                    type: 'json'
+                }
+            })
+});
+        Ext.define('trix.apps.trix.simplified.periodgroup.SimplifiedPeriodGroupSearch', {
+            extend: 'Ext.data.Model',
+            requires: ['devilry.extjshelpers.RestProxy'],
+            fields: [{"type": "int", "name": "id"}, {"type": "auto", "name": "long_name"}, {"type": "auto", "name": "subject"}, {"type": "auto", "name": "subject__long_name"}, {"type": "auto", "name": "periods__id"}, {"type": "auto", "name": "fake_periods"}, {"type": "auto", "name": "fake_followers"}, {"type": "auto", "name": "fake_students"}],
+            idProperty: 'id',
+            proxy: Ext.create('devilry.extjshelpers.RestProxy', {
+                url: '/trix/restfulsimplifiedperiodgroup/',
+                extraParams: {
+                    getdata_in_qrystring: true,
+                    result_fieldgroups: '[]'
+                },
+                reader: {
+                    type: 'json',
+                    root: 'items',
+                    totalProperty: 'total'
+                },
+                writer: {
+                    type: 'json'
+                }
+            })
+        });
+        Ext.create('Ext.data.Store', {
+            model: 'trix.apps.trix.simplified.node.SimplifiedNodeSearch',
+            id: 'trix.apps.trix.simplified.node.SimplifiedNodeStoreSearch',
+            remoteFilter: true,
+            remoteSort: true,
+            autoSync: true
+        });
+    Ext.create('Ext.data.Store', {
+            model: 'trix.apps.trix.simplified.period.SimplifiedPeriodSearch',
+            id: 'trix.apps.trix.simplified.period.SimplifiedPeriodStoreSearch',
+            remoteFilter: true,
+            remoteSort: true,
+            autoSync: true
+});
+        Ext.create('Ext.data.Store', {
+            model: 'trix.apps.trix.simplified.exercise.SimplifiedExerciseSearch',
+            id: 'trix.apps.trix.simplified.exercise.SimplifiedExerciseStoreSearch',
+            remoteFilter: true,
+            remoteSort: true,
+            autoSync: true
+});
+        Ext.create('Ext.data.Store', {
+            model: 'trix.apps.trix.simplified.periodgroup.SimplifiedPeriodGroupSearch',
+            id: 'trix.apps.trix.simplified.periodgroup.SimplifiedPeriodGroupStoreSearch',
+            remoteFilter: true,
+            remoteSort: true,
+            autoSync: true
+})
+Ext.create('Ext.data.Store', {
+            model: 'trix.apps.trix.simplified.periodexercise.SimplifiedPeriodExerciseSearch',
+            id: 'trix.apps.trix.simplified.periodexercise.SimplifiedPeriodExerciseStoreSearch',
+            remoteFilter: true,
+            remoteSort: true,
+            autoSync: true
+});
+        Ext.create('Ext.data.Store', {
+            model: 'trix.apps.trix.simplified.student.SimplifiedStudentSearch',
+            id: 'trix.apps.trix.simplified.student.SimplifiedStudentStoreSearch',
+            remoteFilter: true,
+            remoteSort: true,
+            autoSync: true
+});
+        Ext.create('Ext.data.Store', {
+            model: 'trix.apps.trix.simplified.subject.SimplifiedSubjectSearch',
+            id: 'trix.apps.trix.simplified.subject.SimplifiedSubjectStoreSearch',
+            remoteFilter: true,
+            remoteSort: true,
+            autoSync: true
+        });
     var searchwidget = Ext.create('trix.AdminSearchWidget', {
         //renderTo: 'searchwidget-container',
         hidden: true,
