--- a/trix/templates/trix/trixadmin/base.django.html
+++ b/trix/templates/trix/trixadmin/base.django.html
@@ -3,191 +3,108 @@
 {% load extjs %}
 
 {% block appjs %}
-    {{ block.super }}
-    var DASHBOARD_URL = '{{ DEVILRY_URLPATH_PREFIX }}/trix/trixadmin/';
+{% include "trix/restful.js" %}
+{{ block.super }}
+var DASHBOARD_URL = '{{ DEVILRY_URLPATH_PREFIX }}/trix/trixadmin/';
 Ext.SSL_SECURE_URL = 'javascript:""';
 
-        Ext.define('trix.apps.trix.simplified.topic.SimplifiedTopicSearch', {
-            extend: 'Ext.data.Model',
-            requires: ['devilry.extjshelpers.RestProxy'],
-            fields: [{"type": "int", "name": "id"}, {"type": "auto", "name": "name"}],
-            idProperty: 'id',
-            proxy: Ext.create('devilry.extjshelpers.RestProxy', {
-                url: '/trix/restfulsimplifiedtopic/',
-                extraParams: {
-                    getdata_in_qrystring: true,
-                    result_fieldgroups: '[]'
-                },
-                reader: {
-                    type: 'json',
-                    root: 'items',
-                    totalProperty: 'total'
-                },
-                writer: {
-                    type: 'json'
-                }
-            })
-        });
-        Ext.create('Ext.data.Store', {
-            model: 'trix.apps.trix.simplified.topic.SimplifiedTopicSearch',
-            id: 'trix.apps.trix.simplified.topic.SimplifiedTopicStoreSearch',
-            remoteFilter: true,
-            remoteSort: true,
-            autoSync: true
-        });
+Ext.define('trix.apps.trix.simplified.topic.SimplifiedTopicSearch', {
+    extend: 'Ext.data.Model',
+    requires: ['devilry.extjshelpers.RestProxy'],
+    fields: [{"type": "int", "name": "id"}, {"type": "auto", "name": "name"}],
+    idProperty: 'id',
+    proxy: Ext.create('devilry.extjshelpers.RestProxy', {
+        url: '/trix/restfulsimplifiedtopic/',
+        extraParams: {
+            getdata_in_qrystring: true,
+            result_fieldgroups: '[]'
+        },
+        reader: {
+            type: 'json',
+            root: 'items',
+            totalProperty: 'total'
+        },
+        writer: {
+            type: 'json'
+        }
+    })
+});
+Ext.create('Ext.data.Store', {
+    model: 'trix.apps.trix.simplified.topic.SimplifiedTopicSearch',
+    id: 'trix.apps.trix.simplified.topic.SimplifiedTopicStoreSearch',
+    remoteFilter: true,
+    remoteSort: true,
+    autoSync: true
+});
 
-    {% for RestfulCls in restfulapi.values %}
-        {{ RestfulCls|extjs_combobox_model:"Search" }};
-        {{ RestfulCls|extjs_store:"Search" }};
-    {% endfor %}
+{% for RestfulCls in restfulapi.values %}
+{{ RestfulCls|extjs_combobox_model:"Search" }};
+{{ RestfulCls|extjs_store:"Search" }};
+{% endfor %}
 {% endblock %}
 
 {% block onready %}
 {{ block.super }}
-<!-- inserted for testing -->
-        Ext.define('trix.apps.trix.simplified.period.SimplifiedPeriodSearch', {
-            extend: 'Ext.data.Model',
-            requires: ['devilry.extjshelpers.RestProxy'],
-            fields: [{"type": "int", "name": "id"}, {"type": "auto", "name": "parentnode"}, {"type": "auto", "name": "short_name"}, {"type": "auto", "name": "long_name"}, {"type": "date", "name": "start_time", "dateFormat": "Y-m-dTH:i:s"}, {"type": "date", "name": "end_time", "dateFormat": "Y-m-dTH:i:s"}, {"type": "auto", "name": "group"}, {"type": "auto", "name": "period_ptr"}, {"type": "auto", "name": "parentnode__short_name"}, {"type": "auto", "name": "parentnode__long_name"}],
-            idProperty: 'period_ptr',
-            proxy: Ext.create('devilry.extjshelpers.RestProxy', {
-                url: '/trix/restfulsimplifiedperiod/',
-                extraParams: {
-                    getdata_in_qrystring: true,
-                    result_fieldgroups: '["subject"]'
-                },
-                reader: {
-                    type: 'json',
-                    root: 'items',
-                    totalProperty: 'total'
-                },
-                writer: {
-                    type: 'json'
-                }
-            })
+
+Ext.create('Ext.data.Store', {
+    model: 'trix.apps.trix.simplified.node.SimplifiedNodeSearch',
+    id: 'trix.apps.trix.simplified.node.SimplifiedNodeStoreSearch',
+    remoteFilter: true,
+    remoteSort: true,
+    autoSync: true
 });
-        Ext.define('trix.apps.trix.simplified.exercise.SimplifiedExerciseSearch', {
-            extend: 'Ext.data.Model',
-            requires: ['devilry.extjshelpers.RestProxy'],
-            fields: [{"type": "int", "name": "id"}, {"type": "auto", "name": "short_name"}, {"type": "auto", "name": "long_name"}, {"type": "auto", "name": "text"}, {"type": "int", "name": "points"}, {"type": "int", "name": "topics__id"}, {"type": "int", "name": "prerequisites__id"}, {"type": "auto", "name": "fake_topics"}, {"type": "auto", "name": "fake_prerequisites"}],
-            idProperty: 'id',
-            proxy: Ext.create('devilry.extjshelpers.RestProxy', {
-                url: '/trix/restfulsimplifiedexercise/',
-                extraParams: {
-                    getdata_in_qrystring: true,
-                    result_fieldgroups: '[]'
-                },
-                reader: {
-                    type: 'json',
-                    root: 'items',
-                    totalProperty: 'total'
-                },
-                writer: {
-                    type: 'json'
-                }
-            })
+Ext.create('Ext.data.Store', {
+    model: 'trix.apps.trix.simplified.period.SimplifiedPeriodSearch',
+    id: 'trix.apps.trix.simplified.period.SimplifiedPeriodStoreSearch',
+    remoteFilter: true,
+    remoteSort: true,
+    autoSync: true
 });
-        Ext.define('trix.apps.trix.simplified.node.SimplifiedNodeSearch', {
-            extend: 'Ext.data.Model',
-            requires: ['devilry.extjshelpers.RestProxy'],
-            fields: [{"type": "int", "name": "id"}, {"type": "auto", "name": "parentnode"}, {"type": "auto", "name": "short_name"}, {"type": "auto", "name": "long_name"}],
-            idProperty: 'id',
-            proxy: Ext.create('devilry.extjshelpers.RestProxy', {
-                url: '/trix/restfulsimplifiednode/',
-                extraParams: {
-                    getdata_in_qrystring: true,
-                    result_fieldgroups: '[]'
-                },
-                reader: {
-                    type: 'json',
-                    root: 'items',
-                    totalProperty: 'total'
-                },
-                writer: {
-                    type: 'json'
-                }
-            })
+Ext.create('Ext.data.Store', {
+    model: 'trix.apps.trix.simplified.exercise.SimplifiedExerciseSearch',
+    id: 'trix.apps.trix.simplified.exercise.SimplifiedExerciseStoreSearch',
+    remoteFilter: true,
+    remoteSort: true,
+    autoSync: true
 });
-        Ext.define('trix.apps.trix.simplified.periodgroup.SimplifiedPeriodGroupSearch', {
-            extend: 'Ext.data.Model',
-            requires: ['devilry.extjshelpers.RestProxy'],
-            fields: [{"type": "int", "name": "id"}, {"type": "auto", "name": "long_name"}, {"type": "auto", "name": "subject"}, {"type": "auto", "name": "subject__long_name"}, {"type": "auto", "name": "periods__id"}, {"type": "auto", "name": "fake_periods"}, {"type": "auto", "name": "fake_followers"}, {"type": "auto", "name": "fake_students"}],
-            idProperty: 'id',
-            proxy: Ext.create('devilry.extjshelpers.RestProxy', {
-                url: '/trix/restfulsimplifiedperiodgroup/',
-                extraParams: {
-                    getdata_in_qrystring: true,
-                    result_fieldgroups: '[]'
-                },
-                reader: {
-                    type: 'json',
-                    root: 'items',
-                    totalProperty: 'total'
-                },
-                writer: {
-                    type: 'json'
-                }
-            })
-        });
-        Ext.create('Ext.data.Store', {
-            model: 'trix.apps.trix.simplified.node.SimplifiedNodeSearch',
-            id: 'trix.apps.trix.simplified.node.SimplifiedNodeStoreSearch',
-            remoteFilter: true,
-            remoteSort: true,
-            autoSync: true
-        });
-    Ext.create('Ext.data.Store', {
-            model: 'trix.apps.trix.simplified.period.SimplifiedPeriodSearch',
-            id: 'trix.apps.trix.simplified.period.SimplifiedPeriodStoreSearch',
-            remoteFilter: true,
-            remoteSort: true,
-            autoSync: true
-});
-        Ext.create('Ext.data.Store', {
-            model: 'trix.apps.trix.simplified.exercise.SimplifiedExerciseSearch',
-            id: 'trix.apps.trix.simplified.exercise.SimplifiedExerciseStoreSearch',
-            remoteFilter: true,
-            remoteSort: true,
-            autoSync: true
-});
-        Ext.create('Ext.data.Store', {
-            model: 'trix.apps.trix.simplified.periodgroup.SimplifiedPeriodGroupSearch',
-            id: 'trix.apps.trix.simplified.periodgroup.SimplifiedPeriodGroupStoreSearch',
-            remoteFilter: true,
-            remoteSort: true,
-            autoSync: true
+Ext.create('Ext.data.Store', {
+    model: 'trix.apps.trix.simplified.periodgroup.SimplifiedPeriodGroupSearch',
+    id: 'trix.apps.trix.simplified.periodgroup.SimplifiedPeriodGroupStoreSearch',
+    remoteFilter: true,
+    remoteSort: true,
+    autoSync: true
 })
 Ext.create('Ext.data.Store', {
-            model: 'trix.apps.trix.simplified.periodexercise.SimplifiedPeriodExerciseSearch',
-            id: 'trix.apps.trix.simplified.periodexercise.SimplifiedPeriodExerciseStoreSearch',
-            remoteFilter: true,
-            remoteSort: true,
-            autoSync: true
+    model: 'trix.apps.trix.simplified.periodexercise.SimplifiedPeriodExerciseSearch',
+    id: 'trix.apps.trix.simplified.periodexercise.SimplifiedPeriodExerciseStoreSearch',
+    remoteFilter: true,
+    remoteSort: true,
+    autoSync: true
 });
-        Ext.create('Ext.data.Store', {
-            model: 'trix.apps.trix.simplified.student.SimplifiedStudentSearch',
-            id: 'trix.apps.trix.simplified.student.SimplifiedStudentStoreSearch',
-            remoteFilter: true,
-            remoteSort: true,
-            autoSync: true
+Ext.create('Ext.data.Store', {
+    model: 'trix.apps.trix.simplified.student.SimplifiedStudentSearch',
+    id: 'trix.apps.trix.simplified.student.SimplifiedStudentStoreSearch',
+    remoteFilter: true,
+    remoteSort: true,
+    autoSync: true
 });
-        Ext.create('Ext.data.Store', {
-            model: 'trix.apps.trix.simplified.subject.SimplifiedSubjectSearch',
-            id: 'trix.apps.trix.simplified.subject.SimplifiedSubjectStoreSearch',
-            remoteFilter: true,
-            remoteSort: true,
-            autoSync: true
-        });
-    var searchwidget = Ext.create('trix.AdminSearchWidget', {
-        //renderTo: 'searchwidget-container',
-        hidden: true,
-        urlPrefix: DASHBOARD_URL,
-        periodRowTpl: '\u003Cdiv class\u003D\u0022section popuplistitem\u0022\u003E    \u003Cp class\u003D\u0022path\u0022\u003E{parentnode__long_name}\u003C/p\u003E    \u003Ch1\u003E{long_name:ellipsis(40)}\u003C/h1\u003E\u003C/div\u003E',
-        topicRowTpl: '\u003Cdiv class\u003D\u0022section popuplistitem\u0022\u003E\u003Ch1\u003E{name}\u003C/h1\u003E\u003C/div\u003E',
-        periodgroupRowTpl: '\u003Cdiv class\u003D\u0022section popuplistitem\u0022\u003E    \u003Cp class\u003D\u0022path\u0022\u003E{subject__long_name}\u003C/p\u003E    \u003Ch1\u003E{long_name:ellipsis(40)}\u003C/h1\u003E\u003C/div\u003E',
-        exerciseRowTpl: '\u003Cdiv class\u003D\u0022important\u0022\u003E{short_name}\u003C/div\u003E\u003Cdiv class\u003D\u0022unimportant\u0022\u003E{long_name}\u003C/div\u003E',
-    });
-    searchwidget.loadInitialValues();
+Ext.create('Ext.data.Store', {
+    model: 'trix.apps.trix.simplified.subject.SimplifiedSubjectSearch',
+    id: 'trix.apps.trix.simplified.subject.SimplifiedSubjectStoreSearch',
+    remoteFilter: true,
+    remoteSort: true,
+    autoSync: true
+});
+var searchwidget = Ext.create('trix.AdminSearchWidget', {
+    //renderTo: 'searchwidget-container',
+    hidden: true,
+    urlPrefix: DASHBOARD_URL,
+    periodRowTpl: '\u003Cdiv class\u003D\u0022section popuplistitem\u0022\u003E    \u003Cp class\u003D\u0022path\u0022\u003E{parentnode__long_name}\u003C/p\u003E    \u003Ch1\u003E{long_name:ellipsis(40)}\u003C/h1\u003E\u003C/div\u003E',
+    topicRowTpl: '\u003Cdiv class\u003D\u0022section popuplistitem\u0022\u003E\u003Ch1\u003E{name}\u003C/h1\u003E\u003C/div\u003E',
+    periodgroupRowTpl: '\u003Cdiv class\u003D\u0022section popuplistitem\u0022\u003E    \u003Cp class\u003D\u0022path\u0022\u003E{subject__long_name}\u003C/p\u003E    \u003Ch1\u003E{long_name:ellipsis(40)}\u003C/h1\u003E\u003C/div\u003E',
+    exerciseRowTpl: '\u003Cdiv class\u003D\u0022important\u0022\u003E{short_name}\u003C/div\u003E\u003Cdiv class\u003D\u0022unimportant\u0022\u003E{long_name}\u003C/div\u003E',
+});
+searchwidget.loadInitialValues();
 
 {% endblock %}
 
