--- a/trix/templates/trix/trixadmin/topic.django.html
+++ b/trix/templates/trix/trixadmin/topic.django.html
@@ -28,7 +28,7 @@ var exercisestore = Ext.create('Ext.data.Store', {
     remoteSort: true,
     autoSync: true
 });
-exercisestore.load();
+//exercisestore.load();
 
 {% endblock %}
 {% block onready %}
