--- a/trix/templates/trix/trixadmin/topic.django.html
+++ b/trix/templates/trix/trixadmin/topic.django.html
@@ -8,7 +8,7 @@
 
 {% block appjs %}
 
-{% include "trix/restful.js" %}
+{% include "trix/restful-models.js" %}
 
 {{ block.super }}
 Ext.require('devilry.extjshelpers.formfields.ForeignKeySelector');
