--- a/trix/templates/trix/trixadmin/exercise.django.html
+++ b/trix/templates/trix/trixadmin/exercise.django.html
@@ -7,6 +7,8 @@
 {% endblock %}
 
 {% block appjs %}
+{% include "trix/restful-models.js" %}
+
 {{ block.super }}
     Ext.require('devilry.extjshelpers.formfields.ForeignKeySelector');
     Ext.require('devilry.extjshelpers.RestfulSimplifiedEditWindowBase');
@@ -17,27 +19,6 @@
     Ext.require('trix.ModelView');
     Ext.require('trix.ExerciseView');
     Ext.require('trix.Exercise');
-    Ext.define('trix.apps.trix.simplified.topic.SimplifiedTopic', {
-            extend: 'Ext.data.Model',
-            requires: ['devilry.extjshelpers.RestProxy'],
-            fields: [{"type": "int", "name": "id"}, {"type": "auto", "name": "name"}],
-            idProperty: 'id',
-            proxy: Ext.create('devilry.extjshelpers.RestProxy', {
-                url: '/trix/restfulsimplifiedtopic/',
-                extraParams: {
-                    getdata_in_qrystring: true,
-                    result_fieldgroups: '[]'
-                },
-                reader: {
-                    type: 'json',
-                    root: 'items',
-                    totalProperty: 'total'
-                },
-                writer: {
-                    type: 'json'
-                }
-            })
-        });
 {% endblock %}
 
 {% block onready %}
